Textarea.module.scss add disabled style

--- a/src/modules/components/textarea/Textarea.module.scss
+++ b/src/modules/components/textarea/Textarea.module.scss
@@ -27,6 +27,18 @@
   &:focus {
     background: $site-color-1;
   }
+
+  &:disabled {
+    border: none;
+    border-radius: 0;
+    color: $site-color-2;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background: $site-color-12;
+    }
+  }
 }
 
 @media screen and (max-width: 1600px) {
