--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -187,3 +187,11 @@ $table-parameter: 34;
     margin-top: 8px;
   }
 }
+
+.status_helper {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  margin: 12px;
+}
