--- a/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
@@ -69,6 +69,7 @@ $length: 34px;
       width: max-content;
       height: max-content;
       background: $site-color-12;
+      border-radius: 5px;
     }
   }
 }
