--- a/src/modules/components/text-editor/functions/Prepare.scss
+++ b/src/modules/components/text-editor/functions/Prepare.scss
@@ -113,6 +113,10 @@
   text-decoration: underline;
 }
 
+.s_editor {
+  text-decoration: line-through;
+}
+
 .span_editor {
   font-size: inherit;
   font-family: inherit;
