update to 4.0, + new component canvas color armor

--- a/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-list.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-list.module.scss
@@ -8,6 +8,22 @@
   padding-left: 8px;
   margin-right: 16px;
 
+  .lore {
+    width: auto;
+    font-size: 11px;
+    font-weight: 400;
+    font-family: $fontCustom2;
+    line-height: 1.5;
+    margin: 1px 0;
+    letter-spacing: 0.5px;
+
+    span {
+      font-size: inherit;
+      font-weight: inherit;
+      font-family: inherit;
+    }
+  }
+
   .item {
     height: auto;
     min-height: 0;
