--- a/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
@@ -5,13 +5,15 @@ $length: 34px;
 
 .item_block {
   display: flex;
+  margin: 2px;
+  //padding: 1px;
 
   .item {
     display: flex;
     width: $parameterItem;
     height: $parameterItem;
-    padding: 1px;
-    margin: 2px;
+    //padding: 1px;
+    //margin: 2px;
     border-radius: 4px;
     border: 2px solid $site-color-15;
     transition: all 0.3s ease;
