--- a/src/modules/components/[0_grouped_0]-Profile/user-goods/UserGoodsEdit.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/user-goods/UserGoodsEdit.module.scss
@@ -21,23 +21,32 @@
       height: auto;
       position: relative;
 
-      &:hover {
-        .edit_name {
-          opacity: 1;
-        }
-      }
+      .empty {
+        display: flex;
+        padding: 24px;
+        border-radius: 4px;
+        border: 2px solid $site-color-15;
+        transition: hover 0.3s ease;
+        background: $site-color-14;
+        cursor: pointer;
 
-      .edit_name {
-        font-size: 13px;
-        font-weight: 400;
-        font-family: $fontCustom2;
-        color: $site-color-2;
-        position: absolute;
-        opacity: 0;
-        transition: all 0.25s ease;
-        top: 12px;
-        left: 50%;
-        transform: translate(-50%);
+        svg {
+          width: 144px;
+          height: 144px;
+
+          path {
+            fill: $site-color-15;
+            transition: all 0.3s ease;
+          }
+        }
+
+        &:hover {
+          svg {
+            path {
+              fill: $site-color-4;
+            }
+          }
+        }
       }
     }
 
@@ -71,5 +80,71 @@
     max-width: 500px;
     min-width: 500px;
     margin: 12px auto 0 auto;
+  }
+}
+
+.modal_select_block {
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    .single {
+      display: flex;
+      width: 168px;
+      height: 168px;
+      margin: 14px;
+      transition: all 0.25s ease;
+      border-radius: 12px;
+      cursor: pointer;
+
+      &:hover {
+        background: $site-color-15;
+        box-shadow: 0 0 8px 5px $site-color-15;
+      }
+    }
+  }
+}
+
+.modal_shulker_color {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 12px;
+  max-width: 480px;
+
+  .single {
+    display: flex;
+    width: 96px;
+    height: 96px;
+    margin: 8px;
+    transition: all 0.25s ease;
+    border-radius: 12px;
+    cursor: pointer;
+
+    &:hover {
+      background: $site-color-15;
+      box-shadow: 0 0 8px 5px $site-color-15;
+    }
+  }
+}
+
+.wrapper_editor {
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  min-width: 800px;
+  width: 800px;
+  max-width: 800px;
+  height: auto;
+
+  .editor {
+    display: flex;
+    flex-direction: column;
   }
 }
