input[type="number"] -> appearance: none;

--- a/src/modules/components/input/Input.module.scss
+++ b/src/modules/components/input/Input.module.scss
@@ -22,6 +22,17 @@
   }
 }
 
+.input[type="number"] {
+  -moz-appearance: textfield;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.input[type="number"]::-webkit-inner-spin-button,
+.input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 @media screen and (max-width: 1600px) {
 }
 
