--- a/src/modules/components/[0_grouped_0]-Profile/user-goods/UserGoodsEdit.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/user-goods/UserGoodsEdit.module.scss
@@ -48,6 +48,18 @@
           }
         }
       }
+
+      .active {
+        display: flex;
+        flex-direction: column;
+        margin-top: 8px;
+
+        .actions_item {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+        }
+      }
     }
 
     .arrow_box {
@@ -64,6 +76,27 @@
         min-width: 128px;
         max-width: 128px;
         margin: 0 32px;
+      }
+    }
+  }
+
+  .double {
+    flex-direction: column;
+    margin: 0 auto;
+
+    .item_box {
+    }
+
+    .arrow_box {
+      flex-direction: row;
+      margin: 0 auto;
+
+      .arrow {
+        writing-mode: vertical-rl;
+        margin: 0;
+        width: auto;
+        min-width: auto;
+        max-width: none;
       }
     }
   }
