--- a/src/modules/components/link/Link.module.scss
+++ b/src/modules/components/link/Link.module.scss
@@ -6,7 +6,7 @@
   font-family: $fontCustom2;
   width: 100%;
   height: auto;
-  line-height: 1.5;
+  //line-height: 1.5;
   color: $site-color-10;
   margin: 0 auto;
   transition: all 0.3s ease;
