--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
@@ -1,18 +1,5 @@
 @import "src/Variables";
 
-@keyframes animationBtn {
-  0% {
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  100% {
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-  }
-}
-
 .profileBlock {
   width: 100%;
   height: 100%;
@@ -32,23 +19,15 @@
       padding: 32px;
     }
 
-    .wrapperText {
+    .wrapper_description {
       display: flex;
       flex-direction: column;
-      padding: 0 48px;
+      padding: 0 32px;
       width: 100%;
-
-      .user_update_statement {
-        margin: 12px auto 8px auto;
-        width: 300px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-      }
 
       .text {
         font-weight: 400;
-        font-size: 18px;
+        font-size: 15px;
         font-family: $fontCustom2;
         color: $site-color-2;
         text-align: center;
@@ -56,9 +35,57 @@
         margin: 0 auto;
       }
 
-      .good {
+      .main_text {
         color: $site-color-9;
+        font-size: 20px;
         margin-bottom: 16px;
+      }
+
+      .list {
+        margin: 8px auto;
+
+        li {
+          text-align: center;
+          line-height: 1.35;
+
+          span {
+            font-weight: 400;
+            font-size: 15px;
+            font-family: $fontCustom2;
+            color: $site-color-2;
+          }
+        }
+      }
+
+      .hr_custom {
+        width: 100%;
+        height: 0;
+        margin: 8px 0;
+        border-top-width: 2px;
+        border-style: solid;
+        border-image: linear-gradient(to right, transparent, $site-color-5, transparent) 1;
+      }
+
+      .link_size {
+        font-size: 15px;
+      }
+
+      .link_size_discord {
+        width: max-content;
+        margin: 16px auto 16px auto;
+        font-size: 16px;
+      }
+
+      .accordion_update {
+        margin: 12px auto;
+      }
+
+      .user_update_statement {
+        margin: 8px auto 12px auto;
+        width: 300px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
       }
 
       .version {
@@ -74,7 +101,7 @@
         background: $site-color-12;
         padding: 16px 24px;
 
-        .versionNumber {
+        .number {
           font-family: $fontCustom2;
           font-weight: 400;
           font-size: 24px;
@@ -131,41 +158,8 @@
             transition: all 0.35s ease;
           }
 
-          .ipTo {
+          .ipCopied {
             color: $site-color-9;
-          }
-
-          .copy {
-            line-height: 30px;
-            height: 30px;
-            width: auto;
-            cursor: pointer;
-            padding: 4px;
-            transition: all 0.35s ease;
-
-            .ico {
-              svg {
-                path {
-                  transition: all 0.35s ease;
-                }
-              }
-
-              &:hover {
-                svg {
-                  path {
-                    fill: $site-color-9;
-                  }
-                }
-              }
-            }
-
-            .icoTo {
-              svg {
-                path {
-                  fill: $site-color-9;
-                }
-              }
-            }
           }
         }
       }
@@ -199,15 +193,31 @@
 @media screen and (max-width: 768px) {
   .profileBlock {
     .content {
-      .wrapperText {
+      .wrapper_description {
         padding: 0 36px;
 
         .text {
-          font-size: 16px;
+          font-size: 14px;
+        }
+
+        .main_text {
+          font-size: 18px;
+        }
+
+        .list {
+          li {
+            span {
+              font-size: 14px;
+            }
+          }
+        }
+
+        .link_size {
+          font-size: 14px;
         }
 
         .version {
-          .versionNumber {
+          .number {
             font-size: 22px;
           }
         }
@@ -219,14 +229,18 @@
 @media screen and (max-width: 640px) {
   .profileBlock {
     .content {
-      .wrapperText {
+      .wrapper_description {
         padding: 0 16px;
+
+        .main_text {
+          font-size: 17px;
+        }
 
         .version {
           margin: 24px auto;
           max-width: none;
 
-          .versionNumber {
+          .number {
             font-size: 20px;
           }
         }
@@ -240,20 +254,32 @@
     .content {
       margin-top: 50px;
 
-      .wrapperText {
+      .wrapper_description {
         .text {
-          font-size: 14px;
+          font-size: 13.5px;
         }
 
-        .good {
+        .main_text {
           margin-bottom: 8px;
+        }
+
+        .list {
+          li {
+            span {
+              font-size: 13.5px;
+            }
+          }
+        }
+
+        .link_size {
+          font-size: 13.5px;
         }
 
         .version {
           padding: 12px 16px;
           margin: 16px auto;
 
-          .versionNumber {
+          .number {
             font-size: 18px;
           }
         }
