--- a/src/modules/pages/support/Support.module.scss
+++ b/src/modules/pages/support/Support.module.scss
@@ -49,6 +49,10 @@
           display: flex;
           flex-direction: column;
           margin: 0 0 0 32px;
+
+          .link_support_custom {
+            line-height: 1.5;
+          }
         }
       }
 
