--- a/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-image.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-image.module.scss
@@ -1,18 +1,28 @@
-.wrapperImage {
+.wrapper_image {
   position: relative;
 
-  .absoluteArmor {
-    position: absolute !important;
-    top: 0;
-    left: 0;
+  .single {
+    position: absolute;
+    top: -1xp;
+    left: -1xp;
+    right: -1xp;
+    bottom: -1xp;
   }
 
   .enchant {
-    position: absolute !important;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    opacity: 35%;
+  }
+
+  .crop {
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 2px;
-    opacity: 50%;
+    bottom: 0;
   }
 }
