--- a/src/modules/components/input/Input.module.scss
+++ b/src/modules/components/input/Input.module.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.input:disabled {
+  color: $site-color-6;
+}
+
 .input[type="number"] {
   -moz-appearance: textfield;
   -webkit-appearance: none;
