--- a/src/modules/components/preloader/Preload.module.scss
+++ b/src/modules/components/preloader/Preload.module.scss
@@ -3,10 +3,11 @@
 .preloaderWrapper {
   width: 100%;
   height: 100%;
-  min-height: 80vh;
+  //min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   .preloader {
     width: auto;
@@ -15,6 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding: 64px;
   }
 }
 
